<resources>
    <string name="app_name">TP2_Dev_Mobile</string>
    <string name="appName">Défi Photo</string>
    <string name="hintEmail">Entrez votre e-mail</string>
    <string name="hintPassword">Entrez votre mot de passe</string>
    <string name="btnLogin">Connexion</string>
    <string name="toolbarTitle">Bois-de-Boulogne</string>
    <string name="btnGoogle">Connexion par Google</string>
    <string name="toolBarAccProf">Menu d"'accueil pour enseignant</string>
    <string name="readCommentText">Lire un commentaire ecrit</string>
    <string name="listenCommentAudio">Ecouter un commentaire audio</string>
    <string name="triAlphaEtudiants">Tri alphabétique</string>
    <string name="triActivitesCompl">Tri par activités complétées</string>
    <string name="nomFamille">Nom de famille</string>
    <string name="prenom">Prénom</string>
    <string name="email">E-mail</string>
    <string name="estActif">Actif</string>
    <string name="errorLoginEmail">Veuillez entrer votre e-mail!</string>
    <string name="errorLoginPassword">Veuillez entrer votre mot de passe!</string>
    <string name="QuestionEtudiant">La question de l"'étudiant</string>
    <string name="noComment">Aucun commentaire pour l\'instant</string>
    <string name="addAnswerStudent">Répondre à la question</string>
    <string name="AjouterProf">Ajouter enseignant</string>
    <string name="AjouterEtudiant">Ajouter Étudiant</string>
    <string name="AjouterEnseignantIndividuel">Ajouter un seul enseignant</string>
    <string name="AjouterEnseignantBD">Ajouter une liste d\'enseignant par la base de donnée</string>
    <string name="AjouterEtudiantIndividuel">Ajouter un seul Étudiant</string>
    <string name="AjouterEtudiantBD">Ajouter une liste d\'étudiant par la base de donnée</string>
    <string name="Password">Mot de passe</string>
    <string name="txtConfirmation">Confirmation de changement</string>
    <string name="messageConfirmationPhoto">Voulez-vous changer la photo courrante avec une nouvelle photo?</string>
    <string name="Oui">Oui</string>
    <string name="metier_M" translatable="false">Matières et produits</string>
    <string name="metier_É" translatable="false">Équipement</string>
    <string name="metier_T" translatable="false">Tâches et exigences</string>
    <string name="metier_I" translatable="false">Individu</string>
    <string name="metier_E" translatable="false">Environnement de travail</string>
    <string name="metier_R" translatable="false">Ressources humaines</string>
    <string name="Non">Non</string>
    <string name="PermissionAccepter">Permission Accepté</string>
    <string name="PermissionRefuse">Permission Refusé</string>
    <string name="deconnexion">Se déconnecter</string>
    <string name="Recording">Enregistrement</string>
    <string name="RecordingFailed">Enregistrement Échouer</string>
    <string name="CommentaireExist">Il y a un nouveau commentaire audio</string>
</resources>
